# fastedgy

./: .gitignore  404.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
.claude/: settings.json
.claude/rules/: development.md  docs-features.md  docs.md
.cursor/rules/: docs-features.mdc  docs.mdc
.github/workflows/: docs.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/about/: index.html
0.1/contributing/: index.html
0.1/features/: index.html
0.1/getting-started/: index.html
0.1/mcp/: index.html
1.0/: 404.html  index.html  sitemap.xml
1.0/about/: index.html
1.0/contributing/: index.html
1.0/features/: index.html
1.0/getting-started/: index.html
1.0/mcp/: index.html
1.1/: 404.html  index.html  sitemap.xml
1.1/about/: index.html
1.1/contributing/: index.html
1.1/features/: index.html
1.1/getting-started/: index.html
1.1/mcp/: index.html
1.2/: 404.html  index.html  sitemap.xml
1.2/about/: index.html
1.2/contributing/: index.html
1.2/features/: index.html
1.2/getting-started/: index.html
1.2/mcp/: index.html
1.3/: 404.html  index.html  sitemap.xml
1.3/about/: index.html
1.3/contributing/: index.html
1.3/features/: index.html
1.3/getting-started/: index.html
1.3/mcp/: index.html
1.3/search/: search_index.json
1.4/: 404.html  index.html  sitemap.xml
1.4/about/: index.html
1.4/contributing/: index.html
1.4/features/: index.html
1.4/getting-started/: index.html
1.4/mcp/: index.html
1.5/: 404.html  index.html  sitemap.xml
1.5/about/: index.html
1.5/contributing/: index.html
1.5/features/: index.html
1.5/getting-started/: index.html
1.5/mcp/: index.html
1.5/search/: search_index.json
1.6/: 404.html  index.html  sitemap.xml
1.6/about/: index.html
1.6/contributing/: index.html
1.6/features/: index.html
1.6/getting-started/: index.html
1.6/mcp/: index.html
1.7/: 404.html  index.html  sitemap.xml
1.7/about/: index.html
1.7/contributing/: index.html
1.7/features/: index.html
1.7/getting-started/: index.html
1.7/mcp/: index.html
1.7/search/: search_index.json
about/: index.html
contributing/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/about/: index.html
dev/ai-rules/: index.html
dev/contributing/: index.html
dev/features/: index.html
dev/getting-started/: index.html
dev/mcp/: index.html
dev/search/: search_index.json
docs/: about.md  ai-rules.md  contributing.md  getting-started.md  index.md  mcp.md  versions.json
docs/ai-rules/: fastedgy.md  javascript.md  overview.md  python.md  vue.md
docs/features/: index.md  queued-tasks.md
docs/stylesheets/: extra.css
fastedgy/: __init__.py  __main__.py  app.py  config.py  context.py  dependencies.py  http.py  http_client.py  importer.py  lifecycle.py  logger.py  mail.py  modules.py  serializers.py  storage.py  sudo.py  sync.py  text_merge.py  timezone.py
features/: index.html
getting-started/: index.html
mcp/: index.html
monkay-stubs/: _monkay_instance.pyi
stylesheets/: extra.css
tests/: conftest.py  test_context.py  test_http_client.py  test_openapi_snapshot.py  test_smoke.py  test_sudo.py  test_utils.py
(+1220 files in other folders)
