[project]
name = "fastedgy"
description = "The base that makes web application development simple and fast with FastAPI and Edgy ORM"
authors = [
    {name = "Krafter", email = "developer@krafter.io"},
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = [
    "version"
]
dependencies = [
    "click ~= 8.2",
    "pydantic~=2.11",
    "pydantic-settings~=2.10",
    "rich ~= 14.1",
    "rich-click ~= 1.8",
]

[dependency-groups]
dev = [
    "ruff >= 0.13",
]

[project.scripts]
fastedgy = "fastedgy.cli:main"
fe = "fastedgy.cli:main"
kt = "fastedgy.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fastedgy"]
include-package-data = true
