[project]
name = "fastedgy"
description = "The base that makes web application development simple and fast with FastAPI and Edgy ORM"
authors = [
    {name = "Krafter", email = "developer@krafter.io"},
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = [
    "version"
]
dependencies = [
    "bcrypt ~= 4.3",
    "click ~= 8.2",
    "edgy[postgres] ~= 0.33",
    "fastapi ~= 0.115",
    "html2text ~= 2025.4",
    "openpyxl ~= 3.1",
    "passlib[bcrypt] ~= 1.7",
    "pyexcel-ods3 ~= 0.6",
    "pydantic ~= 2.11",
    "pydantic[email] ~= 2.11",
    "pydantic-settings ~= 2.10",
    "python-jose[cryptography] ~= 3.5",
    "python-multipart ~= 0.0.20",
    "rich ~= 14.1",
    "rich-click ~= 1.8",
    "sqlparse ~= 0.5",
    "uvicorn[standard] ~= 0.34",
]

[dependency-groups]
dev = [
    "ruff >= 0.13",
]

[project.scripts]
fastedgy = "fastedgy.cli:main"
fe = "fastedgy.cli:main"
kt = "fastedgy.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fastedgy"]
include-package-data = true
