[project]
name = "fastedgy"
description = "The base that makes web application development simple and fast with FastAPI and Edgy ORM"
authors = [
    {name = "Krafter", email = "developer@krafter.io"},
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = [
    "version"
]
dependencies = [
    "aiosmtplib ~= 4.0",
    "babel ~= 2.17",
    "bcrypt ~= 4.3",
    "click ~= 8.2",
    "dill ~= 0.4",
    "edgy[postgres] ~= 0.35",
    "fastapi ~= 0.128",
    "html2text ~= 2025.4",
    "httpx ~= 0.28",
    "jinja2 ~= 3.1",
    "openpyxl ~= 3.1",
    "passlib[bcrypt] ~= 1.7",
    "pillow ~= 11.3",
    "pyexcel-ods3 ~= 0.6",
    "pydantic ~= 2.11",
    "pydantic[email] ~= 2.11",
    "pydantic-settings ~= 2.10",
    "python-jose[cryptography] ~= 3.5",
    "python-multipart ~= 0.0.20",
    "rich ~= 14.1",
    "rich-click ~= 1.9",
    "sqlparse ~= 0.5",
    "uuid7 ~= 0.1",
    "uvicorn[standard] ~= 0.34",
]

[dependency-groups]
dev = [
    "ruff >= 0.13",
    "mkdocs-material >= 9.5",
    "mkdocs-minify-plugin >= 0.8",
    "mike>=2.1.3",
]

[project.scripts]
fastedgy = "fastedgy.cli:main"
fe = "fastedgy.cli:main"
kt = "fastedgy.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fastedgy"]
include-package-data = true
